[package]
name = "egglang"
version = "0.3.3"
edition = "2021"
description = "The Egg Programming Language From Eloquent JavaScript, but in Rust"
license = "MIT"
repository = "https://github.com/sokorototo/egglang"
authors = ["Newton Toto nyachiengatoto@gmail.com"]
documentation = "https://docs.rs/egglang"
readme = "README.md"
include = ["Cargo.toml", "Cargo.lock", "src/*"]

keywords = ["egg", "interpreter", "parser", "language", "scripting"]
categories = ["compilers", "parser-implementations", "no-std"]

[dependencies]
arcstr = { version = "1.2.0", default-features = false }
either = { version = "1.13.0", default-features = false }
logos = "0.15.0"
ordered-float = { version = "5.0.0", default-features = false }
thiserror-no-std = "2.0.2"

[features]
std = []

[[bin]]
name = "runner"
path = "scripts/runner.rs"
required-features = ["std"]
